# brigades5

./: Cargo.toml  build.sh  run.sh
ai/: Cargo.toml
ai/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
ds/: Cargo.toml
ds/src/: lib.rs
server/: Cargo.toml
server/src/: game.rs  main.rs  osm.rs  serv.rs  websocket.rs
